--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
-  
+  <header class="header">
+    <div class="header__logo">header logo</div>
+    <div class="header__nav">
+      <div class="header__nav-element">nav element</div>
+    </div>
+  </header>
+  <main class="main">
+    <h1>Planet Name:</h1>
+      <h1 id="htmlPlanetName"></h1>
+  </main>
 </body>
 <script src="app/js/three.js"></script>
 <script src="app/js/script.js"></script>
