finished naming convention

--- a/index.html
+++ b/index.html
@@ -32,18 +32,22 @@
       </div>
 
       <div class="textCard" id="textCard">
+        <div class="deviderLine1"></div>
         <div class="textCard__title">
           <h1 class="textCard__title-intro">Exo-Planet: </h1>
           <h1 id="htmlPlanetName" class="textCard__title-name"></h1>
         </div>
         <div class="textCard__subtitle">
-          <h2 class="textCard__subtitle-known">Commonly known as:<span>Draconus II</span> </h2>
-          <h2></h2>
+          <h2 class="textCard__subtitle-known">Commonly known as:<span id="htmlCommonName"></span> </h2>
+          <p class="textCard__subtitle-description">
+            <!-- we'll leave it til we build the planet's info -->
+          </p>
         </div>
       </div>
     </div>
 
-    
+    <div class="deviderLine2"></div>
+
     <div class="main__right">
 
     </div>
