better planet common names, layour for exo-planet specifications

--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
     <div class="deviderLine2"></div>
 
     <div class="main__right">
+      <h1 class="main__right-title">Exo-Planet Specifications:</h1>
 
+      <div class="main__right-info">
+        <h3 class="main__right-info-title">Id: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">name: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">Star System: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">Rotation Speed: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">Natural environments: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">Living Organisms: <span id="htmlId"></span></h3>
+      </div>
     </div>
 
   </main>
