color system for rarities, finished planet sizes

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 
       <div class="main__right-info">
         <h3 class="main__right-info-title">Id: <span id="htmlId"></span></h3>
-        <h3 class="main__right-info-title">name: <span id="htmlId"></span></h3>
-        <h3 class="main__right-info-title">Star System: <span id="htmlId"></span></h3>
-        <h3 class="main__right-info-title">Rotation Speed: <span id="htmlId"></span></h3>
-        <h3 class="main__right-info-title">Natural environments: <span id="htmlId"></span></h3>
-        <h3 class="main__right-info-title">Living Organisms: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">Name: <span id="htmlName" ></span></h3>
+        <h3 class="main__right-info-title">Size: <span id="htmlSize"></span></h3>
+        <h3 class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></h3>
+        <h3 class="main__right-info-title">Natural environments: <span ></span></h3>
+        <h3 class="main__right-info-title">Living Organisms: <span ></span></h3>
       </div>
     </div>
 
