--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h3 class="main__right-info-title">Name: <span id="htmlName" ></span></h3>
         <h3 class="main__right-info-title">Size: <span id="htmlSize"></span></h3>
         <h3 class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></h3>
-        <h3 class="main__right-info-title">Natural environments: <span ></span></h3>
+        <h3 class="main__right-info-title">Substance State: <span id="htmlSubstanceState"></span></h3>
         <h3 class="main__right-info-title">Living Organisms: <span ></span></h3>
       </div>
     </div>
