--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h3 class="main__right-info-title">Size: <span id="htmlSize"></span></h3>
         <h3 class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></h3>
         <h3 class="main__right-info-title">Substance State: <span id="htmlSubstanceState"></span></h3>
-        <h3 class="main__right-info-title">Living Organisms: <span ></span></h3>
+        <h3 class="main__right-info-title">Life Status: <span id="htmlLifeStatus" ></span></h3>
       </div>
     </div>
 
