added notes for advanced developpement

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <h1 class="header__logo-title">Planeteer</h1>
     </div>
     <div class="header__nav">
-      <div class="header__nav-element">New</div>
-      <div class="header__nav-element">Lists</div>
-      <div class="header__nav-element">Market</div>
+      <div class="header__nav-element">Main Screen</div>
+      <div class="header__nav-element">Advanced</div>
+      <div class="header__nav-element">Listings</div>
       <div class="header__nav-element">Meta</div>
     </div>
   </header>
