added moon status and moon count

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <h3 class="main__right-info-title">Size: <span id="htmlSize"></span></h3>
         <h3 class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></h3>
         <h3 class="main__right-info-title">Substance State: <span id="htmlSubstanceState"></span></h3>
-        <h3 class="main__right-info-title">Life Status: <span id="htmlLifeStatus" ></span></h3>
+        <h3 class="main__right-info-title">Life Status: <span id="htmlLifeStatus"></span></h3>
+        <h3 class="main__right-info-title">Moon Status: <span id="htmlMoonStatus"></span></h3>
+        <h3 class="main__right-info-title">Moon Count: <span id="htmlMoonCount"></span></h3>
       </div>
     </div>
 
