--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         <h3 class="main__right-info-title">Life Status: <span id="htmlLifeStatus"></span></h3>
         <h3 class="main__right-info-title">Moon Status: <span id="htmlMoonStatus"></span></h3>
         <h3 class="main__right-info-title">Moon Count: <span id="htmlMoonCount"></span></h3>
+        <h3 class="main__right-info-title">Habitability: <span id="htmlHabitability"></span></h3>
+        <h3 class="main__right-info-title">Nature Type: <span id="htmlNatureType"></span></h3>
+        <h3 class="main__right-info-title">Nature Color: <span id="htmlNatureColor"></span></h3>
+        <h3 class="main__right-info-title">Liquid Status: <span id="htmlLiquidStatus"></span></h3>
+        <h3 class="main__right-info-title">Liquid Color: <span id="htmlLiquidColor"></span></h3>
       </div>
     </div>
 
