--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <h1 class="main__right-title">Exo-Planet Specifications:</h1>
 
       <div class="main__right-info">
-        <h3 class="main__right-info-title">Id: <span id="htmlId"></span></h3>
+        <h3 class="main__right-info-title">ID: <span id="htmlId"></span></h3>
         <h3 class="main__right-info-title">Name: <span id="htmlName" ></span></h3>
         <h3 class="main__right-info-title">Size: <span id="htmlSize"></span></h3>
         <h3 class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></h3>
