added orbital characteristics

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <a href="">
           <div class="header__nav-element">Meta</div>
         </a>
-        <a href="#">
-          <button id="generate" class="header__nav-element">Generate</button>
+        <a onclick="location.reload()" href="#">
+          <button  id="generate" class="header__nav-element">Generate</button>
         </a>
       </div>
     </header>
@@ -61,28 +61,45 @@
     <div class="main__right">
       <h1 class="main__right-title">Exo-Planet Specifications:</h1>
 
-      <div class="main__right-info">
-        <h3 class="main__right-info-title">ID: <span id="htmlId"></span></h3>
-        <h3 class="main__right-info-title">Name: <span id="htmlName"></span></h3>
-        <h3 class="main__right-info-title">Size: <span id="htmlSize"></span></h3>
-        <h3 class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></h3>
-        <h3 class="main__right-info-title">Substance State: <span id="htmlSubstanceState"></span></h3>
-        <h3 class="main__right-info-title">Life Status: <span id="htmlLifeStatus"></span></h3>
-        <h3 class="main__right-info-title">Moon Status: <span id="htmlMoonStatus"></span></h3>
-        <h3 class="main__right-info-title">Moon Count: <span id="htmlMoonCount"></span></h3>
-        <h3 class="main__right-info-title">Habitability: <span id="htmlHabitability"></span></h3>
-        <h3 class="main__right-info-title">Main Nature Type: <span id="htmlNatureType"></span></h3>
-        <h3 class="main__right-info-title">Nature Color: <span id="htmlNatureColor"></span></h3>
-        <h3 class="main__right-info-title">Liquid Status: <span id="htmlLiquidStatus"></span></h3>
-        <h3 class="main__right-info-title">Liquid Color: <span id="htmlLiquidColor"></span></h3>
-      </div>
+      <ul class="main__right-info">
+        <li class="main__right-info-title">ID: <span id="htmlId"></span></li>
+        <li class="main__right-info-title">Name: <span id="htmlName"></span></li>
+        <li class="main__right-info-title">Size: <span id="htmlSize"></span></li>
+        <li class="main__right-info-title">Orbital Period: <span id="htmlOrbitalPeriod"></span></li>
+        <li class="main__right-info-title">Substance State: <span id="htmlSubstanceState"></span></li>
+        <li class="main__right-info-title">Life Status: <span id="htmlLifeStatus"></span></li>
+        <li class="main__right-info-title">Moon Status: <span id="htmlMoonStatus"></span></li>
+        <li class="main__right-info-title">Moon Count: <span id="htmlMoonCount"></span></li>
+        <li class="main__right-info-title">Habitability: <span id="htmlHabitability"></span></li>
+        <li class="main__right-info-title">Main Nature Type: <span id="htmlNatureType"></span></li>
+        <li class="main__right-info-title">Nature Color: <span id="htmlNatureColor"></span></li>
+        <li class="main__right-info-title">Liquid Status: <span id="htmlLiquidStatus"></span></li>
+        <li class="main__right-info-title">Liquid Color: <span id="htmlLiquidColor"></span></li>
+      </ul>
     </div>
 
   </main>
 
 
   <section id="advanced" class="advanced">
-      <h1>advanced</h1>
+    <div class="advanced__left">
+      <div class="oc">
+        <h1 class="oc__title">Orbital Characteristics</h1>
+        <ul class="oc__info">
+          <li class="oc__info-element">Aphelion: <span></span></li>
+          <li class="oc__info-element">Perihelion: <span></span></li>
+          <li class="oc__info-element">Semi-major axis: <span></span></li>
+          <li class="oc__info-element">Eccentricity: <span></span></li>
+          <li class="oc__info-element">Orbital Period: <span></span></li>
+          <li class="oc__info-element">Average Orbital Speed: <span></span></li>
+          <li class="oc__info-element">Mean Anomaly: <span></span></li>
+          <li class="oc__info-element">Inclination: <span></span></li>
+          <li class="oc__info-element">Longtitude of ascending node: <span></span></li>
+          <li class="oc__info-element">Argument of perihelion: <span></span></li>
+        </ul>
+      </div>
+    </div>
+    <div class="advanced__right"></div>
   </section>
 
 
