--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
       <div class="oc">
         <h1 class="oc__title">Orbital Characteristics</h1>
         <ul class="oc__info">
-          <li class="oc__info-element">Aphelion: <span></span></li>
-          <li class="oc__info-element">Perihelion: <span></span></li>
-          <li class="oc__info-element">Semi-major axis: <span></span></li>
-          <li class="oc__info-element">Eccentricity: <span></span></li>
+          <li class="oc__info-element">Apocenter: <span id="htmlApocenter"></span></li>
+          <li class="oc__info-element">Pericenter: <span id="htmlPericenter"></span></li>
+          <li class="oc__info-element">Semi-major axis: <span id="htmlSemiMajorAxis"></span></li>
+          <li class="oc__info-element">Eccentricity: <span id="htmlEccentricity"></span></li>
           <li class="oc__info-element">Orbital Period: <span></span></li>
           <li class="oc__info-element">Average Orbital Speed: <span></span></li>
           <li class="oc__info-element">Mean Anomaly: <span></span></li>
