--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <li class="oc__info-element">Semi-major axis: <span id="htmlSemiMajorAxis"></span></li>
           <li class="oc__info-element">Eccentricity: <span id="htmlEccentricity"></span></li>
           <li class="oc__info-element">Orbital Period: <span id="htmlOrbitalPeriodAdvanced"></span></li>
-          <li class="oc__info-element">Average Orbital Speed: <span></span></li>
+          <li class="oc__info-element">Average Orbital Speed: <span id="htmlOrbitalSpeed"></span></li>
           <li class="oc__info-element">Mean Anomaly: <span></span></li>
           <li class="oc__info-element">Inclination: <span></span></li>
           <li class="oc__info-element">Longtitude of ascending node: <span></span></li>
