html components, remove three js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="main__left">
       <div class="canvas" id="canvas">
-
+        <!-- Here goes the wireframes -->
       </div>
 
       <div class="textCard" id="textCard">
@@ -98,8 +98,43 @@
           <li class="oc__info-element">Argument of perihelion: <span></span></li>
         </ul>
       </div>
+      <div class="atmosphere">
+        <h1 class="atmosphere__title">Atmosphere</h1>
+        <ul class="atmosphere__info">
+          <li class="atmosphere__info-element">surface pressure: <span id="htmlSurfacePressure"></span></li>
+          <li class="atmosphere__info-element">Scale Height: <span id="htmlScaleHeight"></span></li>
+          <li class="atmosphere__info-element">Composition by Volume: <span id="htmlCompositionByVolume"></span></li>
+        </ul>
+      </div>
     </div>
-    <div class="advanced__right"></div>
+    <div class="advanced__right">
+      <div class="pc">
+      <h1 class="pc__title">Physical Characteristics</h1>
+      <ul class="pc__info">
+        <li class="pc__info-element">Mean radius:<span id="htmlMeanRadius"></span></li>
+        <li class="pc__info-element">Equatorial radius:<span id="htmlEquatorialRadius"></span></li>
+        <li class="pc__info-element">Polar radius:<span id="htmlPolarRadius"></span></li>
+        <li class="pc__info-element">Flattening:<span id="htmlFlattening"></span></li>
+        <li class="pc__info-element">Surface area:<span id="htmlSurfaceArea"></span></li>
+        <li class="pc__info-element">Volume:<span id="htmlVolume"></span></li>
+        <li class="pc__info-element">Mass:<span id="htmlMasse"></span></li>
+        <li class="pc__info-element">Mean density:<span id="htmlMeanDensity"></span></li>
+        <li class="pc__info-element">Surface gravity:<span id="htmlSurfaceGravity"></span></li>
+        <li class="pc__info-element">Moment of inertia factor:<span id="htmlMomentOfInertiaFactor"></span></li>
+        <li class="pc__info-element">Escape velocity:<span id="htmlEscapeVelocity"></span></li>
+        <li class="pc__info-element">Synodic rotation period:<span id="htmlSynodicRotationPeriod"></span></li>
+        <li class="pc__info-element">Sidereal rotation period<span id="htmlSiderealRotationPeriod"></span></li>
+        <li class="pc__info-element">Equatorial rotation Velocity<span id="htmlEquatorialrotationVelcoity"></span></li>
+        <li class="pc__info-element">Axial tilt:<span id="htmlAxialTilt"></span></li>
+        <li class="pc__info-element">North pole right ascension:<span id="htmlNorthPoleRightAscension"></span></li>
+        <li class="pc__info-element">North pole declination:<span id="htmlNothPoleDeclination"></span></li>
+        <li class="pc__info-element">Albedo:<span id="htmlAlbedo"></span></li>
+        <li class="pc__info-element">Surface temperature: <span id="htmlSurfaceTemperature"></span></li>
+        <li class="pc__info-element">Apparent magnitude:<span id="htmlApparentMagnitude"></span></li>
+        <li class="pc__info-element">Angular diameter:<span id="htmlAngularDiameter"></span></li>
+      </ul>
+    </div>
+    </div></div>
   </section>
 
 
