--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="header__nav-element">Advanced</div>
         </a>
         <a href="">
-          <div class="header__nav-element">Listings</div>
+          <div class="header__nav-element">Blog</div>
         </a>
         <a href="">
           <div class="header__nav-element">Meta</div>
@@ -93,9 +93,10 @@
           <li class="oc__info-element">Orbital Period: <span id="htmlOrbitalPeriodAdvanced"></span></li>
           <li class="oc__info-element">Average Orbital Speed: <span id="htmlOrbitalSpeed"></span></li>
           <li class="oc__info-element">Mean angular motion: <span id="htmlMeanAngularMotion"></span></li>
-          <li class="oc__info-element">Inclination: <span></span></li>
-          <li class="oc__info-element">Longtitude of ascending node: <span></span></li>
-          <li class="oc__info-element">Argument of perihelion: <span></span></li>
+          <li class="oc__info-element">Inclination: <span id="htmlInclination"></span></li>
+          <li class="oc__info-element">Longtitude of ascending node: <span id="htmlLongtitudeOfAscendingNode"></span></li> 
+          <!-- It was here that I learned spaces inside an ID ruin your ID. -->
+          <li class="oc__info-element">Time of perihelion: <span id="htmlTimeOfPerihelion"></span></li>
         </ul>
       </div>
       <div class="atmosphere">
