--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <li class="oc__info-element">Inclination: <span id="htmlInclination"></span></li>
           <li class="oc__info-element">Longtitude of ascending node: <span id="htmlLongtitudeOfAscendingNode"></span></li> 
           <!-- It was here that I learned spaces inside an ID ruin your ID. -->
-          <li class="oc__info-element">Time of perihelion: <span id="htmlTimeOfPerihelion"></span></li>
+          <li class="oc__info-element">Time of perihelion: <span id="htmlTimePerihilion"></span></li>
         </ul>
       </div>
       <div class="atmosphere">
