--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="atmosphere">
         <h1 class="atmosphere__title">Atmosphere</h1>
         <ul class="atmosphere__info">
-          <li class="atmosphere__info-element">surface pressure: <span id="htmlSurfacePressure"></span></li>
+          <li class="atmosphere__info-element">Surface pressure: <span id="htmlSurfacePressure"></span></li>
           <li class="atmosphere__info-element">Scale Height: <span id="htmlScaleHeight"></span></li>
           <li class="atmosphere__info-element">Composition by Volume: <span id="htmlCompositionByVolume"></span></li>
         </ul>
