--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         <li class="pc__info-element">Surface area:<span id="htmlSurfaceArea"></span></li>
         <li class="pc__info-element">Volume:<span id="htmlVolume"></span></li>
         <li class="pc__info-element">Mass:<span id="htmlMasse"></span></li>
-        <li class="pc__info-element">Mean density:<span id="htmlMeanDensity"></span></li>
+        <li class="pc__info-element">Mean density:<span id="htmlDensity"></span></li>
         <li class="pc__info-element">Surface gravity:<span id="htmlSurfaceGravity"></span></li>
         <li class="pc__info-element">Moment of inertia factor:<span id="htmlMomentOfInertiaFactor"></span></li>
         <li class="pc__info-element">Escape velocity:<span id="htmlEscapeVelocity"></span></li>
-        <li class="pc__info-element">Equatorial rotation Velocity<span id="htmlEquatorialrotationVelcoity"></span></li>
+        <li class="pc__info-element">Equatorial rotation Velocity:<span id="htmlEquatorialrotationVelcoity"></span></li>
         <li class="pc__info-element">Axial tilt:<span id="htmlAxialTilt"></span></li>
         <li class="pc__info-element">North pole right ascension:<span id="htmlNorthPoleRightAscension"></span></li>
         <li class="pc__info-element">North pole declination:<span id="htmlNothPoleDeclination"></span></li>
