North Pole degrees

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <li class="pc__info-element">Equatorial rotation Velocity:<span id="htmlEquatorialrotationVelcoity"></span></li>
         <li class="pc__info-element">Axial tilt:<span id="htmlAxialTilt"></span></li>
         <li class="pc__info-element">North pole right ascension:<span id="htmlNorthPoleRightAscension"></span></li>
-        <li class="pc__info-element">North pole declination:<span id="htmlNothPoleDeclination"></span></li>
+        <li class="pc__info-element">North pole declination:<span id="htmlNorthPoleDeclination"></span></li>
         <li class="pc__info-element">Albedo:<span id="htmlAlbedo"></span></li>
         <li class="pc__info-element">Surface temperature: <span id="htmlSurfaceTemperature"></span></li>
         <li class="pc__info-element">Apparent magnitude:<span id="htmlApparentMagnitude"></span></li>
