--- a/index.html
+++ b/index.html
@@ -72,9 +72,6 @@
         <li class="main__right-info-title">Moon Count: <span id="htmlMoonCount"></span></li>
         <li class="main__right-info-title">Habitability: <span id="htmlHabitability"></span></li>
         <li class="main__right-info-title">Main Nature Type: <span id="htmlNatureType"></span></li>
-        <li class="main__right-info-title">Nature Color: <span id="htmlNatureColor"></span></li>
-        <li class="main__right-info-title">Liquid Status: <span id="htmlLiquidStatus"></span></li>
-        <li class="main__right-info-title">Liquid Color: <span id="htmlLiquidColor"></span></li>
       </ul>
     </div>
 
@@ -133,6 +130,10 @@
       </ul>
     </div>
     </div></div>
+  </section>
+
+  <section id="blog" class="blog">
+    
   </section>
 
 
